tests/NormalTests/paczka1/fuzzy1/44797534.err
Error in line 12: PH9UD A153 69,0
Error in line 4: Ifejt3Eh S851 87,6
Error in line 21: Ifejt3Eh S378 62,4
Error in line 22: Ifejt3Eh S851 80,2
Error in line 27: OfYUWwM S842 87,0
Error in line 28: Lh2SsSR1oo2 S842 25,1
Error in line 31: MTEiXLtyHB S842 57,7
